# Mimonitor_Toolbox

./: .gitignore  CLAUDE.md  Makefile  MonitorToolbox.spec  README.md  build.bat  monitor_controller.py  requirements-build.txt
.github/workflows/: build.yml
assets/adb_guardian/: README.md  adbguardian-signed.apk
assets/runtime/: README.md
mimonitor/: index.html  package-lock.json  package.json
mimonitor/src/: App.tsx
mimonitor/src-tauri/: Cargo.toml  tauri.conf.json
mimonitor/src-tauri/capabilities/: default.json
mimonitor/src-tauri/src/: lib.rs  main.rs  tray.rs
mimonitor/src-tauri/src/adb/: device.rs  guardian.rs  jni.rs  mod.rs  scanner.rs  settings.rs
mimonitor/src-tauri/src/commands/: connection.rs  game.rs  guardian.rs  hdr.rs  light.rs  mod.rs  picture.rs  remote.rs  settings.rs  source.rs
mimonitor/src-tauri/src/hdr/: linux.rs  macos.rs  mod.rs  windows.rs
mimonitor/src-tauri/src/mcp/: mod.rs
mimonitor/src-tauri/src/socket/: mod.rs
mimonitor/src-tauri/src/state/: config.rs  constants.rs  mod.rs
mimonitor/src/components/ui/: button.tsx  card.tsx  slider.tsx  toggle-group.tsx
mimonitor/src/pages/: Game.tsx  Home.tsx  Hotkey.tsx  Light.tsx  Picture.tsx  Remote.tsx  Settings.tsx  Source.tsx  Tools.tsx
mimonitor/src/styles/: global.css
tests/: test_runtime.py
tools/colorful_led/: ColorfulLedTool.java  README.md
tools/monitor-tool/: MonitorTool.java  README.md  build.sh
tools/monitor-tool/stubs/android/os/: HwBinder.java  HwParcel.java  IHwBinder.java
tools/mtk_direct/: MtkDirectTool.java  README.md
