[package]
name = "mimonitor"
version = "1.0.0"
description = "Redmi G Pro 27U Monitor Toolbox"
authors = ["longjuan"]
license = "MIT"
repository = "https://github.com/YiHooong/Mimonitor_Toolbox"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "mimonitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# ADB protocol (pure Rust, no binary dependency)
adb_client = { version = "3", default-features = false }

# Logging
log = "0.4"

# Config & filesystem
dirs = "5"

# Error handling
thiserror = "2"

# CLI (for mimonitor CLI binary)
clap = { version = "4", features = ["derive"] }
